@@ -62,21 +62,34 @@ cdl_package CYGPKG_NET_SNTP {
     requires      CYGSEM_LIBC_TIME_SETTIME_WORKING
     compile       sntp.c
     
+    cdl_component CYGPKG_NET_SNTP_UNICAST {
+        display "Enable SNTP client unicast support"
+        flavor  bool
+        default_value 0
+        description   "
+            This option enables SNTP unicast mode in
+            for the SNTP client.  This mode will send
+            SNTP requests to NTP/SNTP servers in
+            addition to listening for SNTP broadcasts."
+
+        cdl_option CYGNUM_NET_SNTP_UNICAST_MAXDHCP {
+            display "Maximum number of NTP servers to use from DHCP"
+            flavor  booldata
+            requires CYGPKG_NET_DHCP
+            legal_values 1 to 8
+            default_value 2
+            description   "
+                This option specifies the maximum number of
+                NTP servers to get from DHCP.  These servers
+                are used to configure the unicast SNTP client.
+                Disabling this option disables DHCP usage."
+        }
+    }
+
     cdl_component CYGPKG_NET_SNTP_OPTIONS {
         display "SNTP support build options"
         flavor  none
         no_define
-
-        cdl_option CYGPKG_NET_SNTP_UNICAST {
-            display "Enable SNTP client unicast support"
-            flavor  bool
-            default_value 0
-            description   "
-                This option enables SNTP unicast mode in
-                for the SNTP client.  This mode will send
-                SNTP requests to NTP/SNTP servers in
-                addition to listening for SNTP broadcasts."
-        }
 
         cdl_option CYGPKG_NET_SNTP_CFLAGS_ADD {
             display "Additional compiler flags"
