@@ -66,7 +66,7 @@ net_test(cyg_addrword_t param)
   int seconds;
   time_t now, build_time;
   struct tm tm={ 0,0,0,0,0,0,0,0,0 };
-  int i;
+  int i, loop, waittime;
   char month[4];
   char months[12][4] = { "Jan", "Feb", "Mar", 
 			 "Apr", "May", "Jun", 
@@ -82,39 +82,78 @@ net_test(cyg_addrword_t param)
 
   cyg_sntp_start();
 
-  for (seconds = 20; seconds > 0; seconds--) {
-    now = time(NULL);
-    ctime_r(&now, time_info);
-    time_info[strlen(time_info)-1] = '\0';  // Strip \n
-    CYG_TEST_INFO(time_info);
-    cyg_thread_delay(100);
-  }
-  
-  now = time(NULL);
-
-  if ( now < (5 * 60)) {
-    CYG_TEST_FAIL_FINISH("Nothing recieved from the SNTP server");
-  } else {
-    
-    i=sscanf(__DATE__, "%s %d %d",month,&tm.tm_mday,&tm.tm_year);
-    CYG_ASSERT(3==i,"sscanf did not return enough results");
-    for (i=0; i < 12; i++) {
-      if (!strcmp(month,months[i])) 
-	break;
-    }
-    tm.tm_mon = i;
-    tm.tm_year -= 1900;
-
-    build_time = mktime(&tm);
-    CYG_ASSERT(-1 != build_time,"mktime returned -1");
-
-    if (build_time > time(NULL)) {
-      CYG_TEST_FAIL_FINISH("Build time is ahead of SNTP time");
+  /* The SNTP client will try to obtain NTP time updates by
+   * listening for multicasts.  It can also be configured
+   * to send unicast requests to specific NTP servers.  By
+   * default, unicast NTP servers are obtained from DHCP.
+   *
+   * If unicast mode is enabled, the run the test loop twice.
+   * The first time, unicast requests will be sent.  The
+   * second time, the unicast list will be unconfigured and
+   * the client will listen only for multicasts.
+   *
+   * Note that this test is somewhat bogus since multicast
+   * NTP packets will actually allow both test loops to
+   * pass.  But it is the best we can do for the automated
+   * test, so consider this more of a usage example.
+   */
+#ifdef CYGPKG_NET_SNTP_UNICAST
+  loop = 2;
+#else
+  loop = 1;
+#endif
+  while (loop-- > 0)
+  {
+    if (loop == 1) {
+      CYG_TEST_INFO("Testing SNTP unicast mode.");
+      waittime=14;
     } else {
-      if ((build_time + 60 * 60 * 24 * 90) < time(NULL)) {
-	CYG_TEST_FAIL_FINISH("Build time is more than 90 days old");
+      CYG_TEST_INFO("Testing SNTP multicast mode.");
+      waittime=20;
+    }
+    for (seconds = waittime; seconds > 0; seconds--) {
+      now = time(NULL);
+      ctime_r(&now, time_info);
+      time_info[strlen(time_info)-1] = '\0';  // Strip \n
+      CYG_TEST_INFO(time_info);
+      cyg_thread_delay(100);
+    }
+  
+    now = time(NULL);
+
+    if ( now < (5 * 60)) {
+      CYG_TEST_FAIL_FINISH("Nothing recieved from the SNTP server");
+    } else {
+    
+      i=sscanf(__DATE__, "%s %d %d",month,&tm.tm_mday,&tm.tm_year);
+      CYG_ASSERT(3==i,"sscanf did not return enough results");
+      for (i=0; i < 12; i++) {
+        if (!strcmp(month,months[i])) 
+          break;
+      }
+      tm.tm_mon = i;
+      tm.tm_year -= 1900;
+
+      build_time = mktime(&tm);
+      CYG_ASSERT(-1 != build_time,"mktime returned -1");
+
+      if (build_time > time(NULL)) {
+        CYG_TEST_FAIL_FINISH("Build time is ahead of SNTP time");
+      } else {
+        if ((build_time + 60 * 60 * 24 * 90) < time(NULL)) {
+  	      CYG_TEST_FAIL_FINISH("Build time is more than 90 days old");
+        }
       }
     }
+
+#ifdef CYGPKG_NET_SNTP_UNICAST
+    /* For the second pass of the test, we set the time
+     * back to epoch and unconfigure the list of SNTP
+     * unicast servers.  This will test non-unicast mode.
+     */
+    cyg_sntp_set_servers(NULL, 0);
+    cyg_libc_time_settime(0);
+#endif
   }
   CYG_TEST_PASS_FINISH("sntp1 test is complete");
 }
