@@ -1,3 +1,12 @@
+2003-10-15  Dan Jakubiec  <djakubiec@yahoo.com>
+            Andrew Lunn   <andrew.lunn@ascom.ch>
+
+	* src/sntp.c: Added DHCP support for SNTP unicast mode.
+	* src/sntp.cdl: Added DHCP support for SNTP unicast mode.
+	* src/sntp.h: Removed UDP port constant.
+	* src/sntp1.c: Added test code for SNTP unicast mode.
+	* src/sntp.sgml: Added documentation for SNTP unicast mode.
+
 2003-09-29  Dan Jakubiec  <firstname.lastname@systech.com>
 
 	* src/sntp.c: Added support for SNTP unicast mode.
